--- a/airbnb-thankyou-xmas.html
+++ b/airbnb-thankyou-xmas.html
@@ -71,7 +71,9 @@
         color: #ffffff !important;
         font-size: 1px !important;
       }</style>
-        <!-- <mj-font name="futura-pt" href="https://use.typekit.net/wdk0dfz.css" /> -->
+        <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
+<!-- <mj-font name="futura-pt" href="https://use.typekit.net/wdk0dfz.css" /> -->
       </head>
       <body style="word-spacing:normal;background-color:#074009;">
         
@@ -274,9 +276,9 @@
                align="center" bgcolor="white" role="presentation" style="border:none;border-radius:0;cursor:auto;mso-padding-alt:10px 25px;background:white;" valign="middle"
             >
               <a
-                 href="mailto:ritas.amenities@gmail.com" style="display:inline-block;width:220px;background:white;color:black;font-family:roboto, Arial;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:0;" target="_blank"
+                 href="mailto:ritas.amenities@gmail.com?subject=Booking Enquiry" style="display:inline-block;width:220px;background:white;color:black;font-family:roboto, Arial;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:0;" target="_blank"
               >
-                ritas.amenities@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span>
+                ritas.amenities@gmail.com
               </a>
             </td>
           </tr>
@@ -328,9 +330,9 @@
                align="center" bgcolor="white" role="presentation" style="border:none;border-radius:0;cursor:auto;mso-padding-alt:10px 25px;background:white;" valign="middle"
             >
               <a
-                 href="mailto:georgeritas12@gmail.com" style="display:inline-block;width:220px;background:white;color:black;font-family:roboto, Arial;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:0;" target="_blank"
+                 href="mailto:georgeritas12@gmail.com?subject=Booking Enquiry" style="display:inline-block;width:220px;background:white;color:black;font-family:roboto, Arial;font-size:16px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:0;" target="_blank"
               >
-                georgeritas12@gmail.com <span style="font-size:20px;vertical-align:middle;">🠮</span>
+                georgeritas12@gmail.com
               </a>
             </td>
           </tr>
